--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.11"
+    "react-scripts": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
